# esp32c3-rtic-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  timer_task.rs
