[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
name = "esp32c3-rtic-template"
edition = "2021"
version = "0.1.0"

[dependencies]
# defmt = { version = "0.3", features = ["encoding-rzcobs"] }
# defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
# esp-hal = { version = "0.16.0", features = ["esp32c3", "async", "interrupt-preemption"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", features = [
    "esp32c3",
    "async",
] }
esp-println = { version = "0.9.0", features = ["esp32c3"] }
esp32c3 = { version = "0.21.0", features = ["rt", "critical-section"] }
# panic-probe = { version = "0.3", features = ["print-defmt"] }
# rtic = { version = "2.0.0", features = ["riscv-esp32c3-backend"] }
rtic = { git = 'https://github.com/rtic-rs/rtic', features = [
    "riscv-esp32c3-backend",
] }

rtic-sync = { git = 'https://github.com/rtic-rs/rtic' }

rtt-target = { version = "0.4.0" }
panic-rtt-target = "0.1.2"

# TODO add a monotonic if you use scheduling
# rtic-monotonics = { version = "1.0.0", features = [ "cortex-m-systick" ]}

# cargo build/run
[profile.dev]
opt-level = "s"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# lto = 'fat'
opt-level = "s"         # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
