[package]
name = "esp32c3-rtic-template"
edition = "2021"
version = "0.1.0"

[dependencies]
esp-backtrace = { version = "0.12.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = ["esp32c3"] }
esp-println = { version = "0.9.1", features = ["esp32c3", "uart"] }
esp32c3 = { version = "0.22.0", features = ["rt", "critical-section"] }
fugit = "0.3.7"
rtic = { git = 'https://github.com/rtic-rs/rtic', features = [
    "riscv-esp32c3-backend",
] }

# cargo build/run
[profile.dev]
opt-level = "s"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# lto = 'fat'
opt-level = "s"         # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
